--- a/Home-part/css/style.css
+++ b/Home-part/css/style.css
@@ -1,5 +1,5 @@
 /* ===================================Common CSS====================================== */
-:root{
+:root {
     --dmSans: "DM Sans", serif;
 
     --blackColor: rgba(38, 38, 38, 1);
@@ -46,9 +46,10 @@ img {
     vertical-align: center;
 }
 
-html{
+html {
     scroll-behavior: smooth;
 }
+
 /* ===================================Common CSS====================================== */
 
 
@@ -71,6 +72,180 @@ html{
 
 
 /* ===================================Sale CSS====================================== */
+#salePart {
+    background-color: var(--whiteColor);
+    padding: 22px 0;
+}
+
+.salePartwarranty {
+    display: flex;
+
+}
+
+.salePartwarranty__summary {
+    font-size: 16px;
+    font-family: var(--dmSans);
+    font-weight: 400;
+    color: #6D6D6D;
+    padding-left: 16px;
+}
+
+.salePartshipping {
+    display: flex;
+}
+
+.salePartshipping__img {
+    padding-left: 130px;
+}
+
+.salePartshipping_summary {
+    font-size: 16px;
+    font-family: var(--dmSans);
+    font-weight: 400;
+    color: #6D6D6D;
+    padding-left: 15px;
+}
+
+.salePartreturn {
+    display: flex;
+
+}
+
+.salePartreturn__icon {
+    padding-left: 180px;
+}
+
+.salePartreturn__summary {
+    font-size: 16px;
+    font-family: var(--dmSans);
+    font-weight: 400;
+    color: #6D6D6D;
+    padding-left: 15px;
+}
+
+/* =============sale image part css========= */
+.salepartBottom {
+    padding-top: 174px;
+    padding-bottom: 128px;
+}
+
+.phonesaleImg {
+    width: 780px;
+    height: 780px;
+    object-fit: cover;
+}
+
+.phonesaleImg2 {
+    width: 790px;
+    height: 370px;
+    object-fit: cover;
+    padding-bottom: 100px;
+
+}
+
+.phonesaleImg3 {
+    width: 790px;
+    height: 370px;
+    object-fit: cover;
+}
+
+.salepartBottomLeft {
+    cursor: pointer;
+}
+
+.salepartBottomLeft:hover .overlay {
+    left: 0;
+    top: 0;
+    opacity: 1;
+}
+
+.overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: -100%;
+    top: 0;
+    background-image: linear-gradient(to bottom, #1c1e534e, rgba(28, 30, 83, 0.515));
+    padding-left: 65px;
+    padding-top: 400px;
+    opacity: 0;
+    transition: all linear .6s;
+    -webkit-transition: all linear .6s;
+    -moz-transition: all linear .6s;
+    -ms-transition: all linear .6s;
+    -o-transition: all linear .6s;
+}
+
+.overlaysalepartHeading {
+    font-size: 40px;
+    font-family: var(--dmSans);
+    font-weight: 700;
+    color: #262626;
+}
+
+.overlaysalepartContent {
+    display: flex;
+    align-items: center;
+    padding-bottom: 35px;
+}
+
+.overlaysalepartContent__title {
+    font-size: 16px;
+    font-family: var(--dmSans);
+    font-weight: 400;
+    color: #262626;
+    opacity: 70%;
+}
+
+.overlaysalepartContent__number {
+    font-size: 40px;
+    font-family: var(--dmSans);
+    font-weight: 700;
+    color: #262626;
+    padding-left: 12px;
+    padding-right: 12px;
+}
+
+.overlaysalepartContent__summary {
+    font-size: 16px;
+    font-family: var(--dmSans);
+    font-weight: 400;
+    color: #262626;
+    opacity: 70%;
+}
+
+.overlaysalepart__button {
+    font-size: 14px;
+    font-family: var(--dmSans);
+    font-weight: 700;
+    border: none;
+    color: #FFFFFF;
+    background-color: var(--blackColor);
+    padding: 16px 57px;
+}
+
+.salepartBottomright:hover .overlayRight {
+    left: 0;
+    top: 0;
+    opacity: 1;
+}
+
+.overlayRight {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(to bottom, #1c1e534e, rgba(28, 30, 83, 0.515));
+    left: 50%;
+    top: 0;
+    padding-left: 30px;
+    padding-top: 66px;
+    opacity: 0;
+    transition: all linear .6s;
+    -webkit-transition: all linear .6s;
+    -moz-transition: all linear .6s;
+    -ms-transition: all linear .6s;
+    -o-transition: all linear .6s;
+}
 
 /* ===================================Sale CSS====================================== */
 
